Code the entirety of the CSS and HTML, and most of the Javascript. Only the erase buttons remain, as well as the decimal and the color related ones, the keyboard support and the overflowing prevention feature.

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta charset="UTF-8"/>
   <link rel="stylesheet" href="style.css">
   <script src="script.js" defer></script>
-  <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/segment7" type="text/css"/> 
+  <!-- <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/segment7" type="text/css"/> -->
 </head>
 <body>
     <div id="calculator-body">
         <div id="calculator-screen">
-            <div id="user-input" class="text-display user-input">8374.571</div>
-            <div class="text-display result">843.21684</div>
+            <div id="user-input" class="text-display user-input">+-/X</div>
+            <div id="result" class="text-display result">843.21684</div>
         </div>
         <div id="buttons-container">
             <button class="num seven">7</button>
