Remove the initial displayed on-screen values in the HTML, code a class change in javascript to emulate the buttons being pressed when the user presses the related key, code the unpressButton() timeout function that delete the class, code the style for the new class in the CSS.

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <div id="calculator-body">
         <div id="calculator-screen">
-            <div id="user-input" class="text-display user-input">+-/X</div>
-            <div id="result" class="text-display result">843.21684</div>
+            <div id="user-input" class="text-display user-input"></div>
+            <div id="result" class="text-display result"></div>
         </div>
         <div id="buttons-container">
             <button class="num seven">7</button>
